deploy/monitoring/grafana/assisted-installer-ocp-grafana.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - args:
        - -config=/etc/grafana/grafana.ini
        image: quay.io/openshift/origin-grafana:latest
        imagePullPolicy: IfNotPresent
        name: grafana
        ports:
        - containerPort: 3001
          name: http
          protocol: TCP
        resources:
          limits:
            memory: "2Gi"
            cpu: "1000m"
          requests:
            cpu: "100m"
            memory: "100Mi"
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
        - mountPath: /etc/grafana/provisioning/dashboards
          name: grafana-dashboards
        - mountPath: /grafana-dashboard-definitions/0/assistedinstaller
          name: grafana-dashboard-assisted-installer
        - mountPath: /etc/grafana
          name: grafana-config
      - args:
        - -provider=openshift
        - -https-address=:3000
        - -http-address=
        - -email-domain=*
        - -upstream=http://localhost:3001
        - '-openshift-sar={"resource":"namespaces","resourceName":"assisted-installer","namespace":"assisted-installer","verb":"get"}' 
        - -tls-cert=/etc/tls/private/tls.crt
        - -tls-key=/etc/tls/private/tls.key
        - -client-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token
        - -cookie-secret-file=/etc/proxy/secrets/session_secret
        - -openshift-service-account=grafana
        - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - -openshift-ca=/etc/proxy/custom-ca/ca.crt
        - -skip-auth-regex=^/metrics
        image: quay.io/openshift/origin-oauth-proxy:4.7
        imagePullPolicy: IfNotPresent
        name: oauth-proxy
        ports:
        - containerPort: 3000
          name: web-proxy
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/tls/private
          name: secret-grafana-tls
        - mountPath: /etc/proxy/secrets
          name: secret-grafana-proxy
        - mountPath: /etc/proxy/custom-ca
          name: secret-openshift-custom-ca
      restartPolicy: Always
      serviceAccountName: grafana
      terminationGracePeriodSeconds: 30
      volumes:
      - name: grafana-storage
        emptyDir: {}
      - name: grafana-datasources
        secret:
          defaultMode: 420
          secretName: grafana-datasources
      - name: secret-openshift-custom-ca
        secret:
          defaultMode: 420
          secretName: openshift-custom-ca
      - name: grafana-dashboards
        configMap:
          defaultMode: 420
          name: grafana-dashboards
      - name: grafana-dashboard-assisted-installer
        configMap:
          defaultMode: 420
          name: grafana-dashboard-assisted-installer
      - name: grafana-config
        secret:
          defaultMode: 420
          secretName: grafana-config
      - name: secret-grafana-tls
        secret:
          defaultMode: 420
          secretName: grafana-tls
      - name: secret-grafana-proxy
        secret:
          defaultMode: 420
          secretName: grafana-proxy
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: grafana-tls
  labels:
    app: grafana
  name: grafana
spec:
  ports:
  - name: web-proxy
    port: 3000
    protocol: TCP
    targetPort: web-proxy
  selector:
    app: grafana
  type: ClusterIP
