deploy/monitoring/grafana/assisted-installer-ocp-grafana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: grafana
  namespace: assisted-installer
spec:
  host: grafana-assisted-installer.INGRESS_DOMAIN
  port:
    targetPort: web-proxy
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: grafana
    weight: 100
  wildcardPolicy: None
